samples/_failures_safe/1761402930_9a0626_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3ecaba0.c: In function ‘main’:
./samples/SAFE/__tmp_b3ecaba0.c:176:9: error: expected declaration or statement at end of input
  176 |         token_list_destroy(token_list);
      |         ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b3ecaba0.c:176:9: error: expected declaration or statement at end of input
